@@ -2,8 +2,8 @@
     DirB:        1*L->H,        0*H->L
  EnableA:        1*L->H,        1*H->L
  EnableB:        1*L->H,        1*H->L
-   StepA:     1000*L->H,     1000*H->L, Max High=13us Total High=4969us
-   StepB:     1000*L->H,     1000*H->L, Max High=20us Total High=5229us
+   StepA:     1000*L->H,     1000*H->L, Max High=13us Total High=4988us
+   StepB:     1000*L->H,     1000*H->L, Max High=16us Total High=5196us
 Position[A]=1000
 
 Position[B]=1000
@@ -12,11 +12,11 @@ Time in EnableA  max=200788 us, total=200788 us
 
 Time in EnableB  max=213535 us, total=213535 us
 
-Time in FillISR  max=2562 us, total=45724 us
+Time in FillISR  max=2562 us, total=45691 us
 
-Time in StepA  max=13 us, total=4969 us
+Time in StepA  max=13 us, total=4988 us
 
-Time in StepB  max=20 us, total=5229 us
+Time in StepB  max=16 us, total=5196 us
 
 Time in StepISR  max=5 us, total=8620 us
 
