@@ -1,3 +1,7 @@
+pre-0.21.2:
+- Two new API functions: setSpeedInTicks() and getSpeedInTicks()
+- setSpeedInHz() and setSpeedInMilliHz() uses higher resolution that us
+
 0.21.1:
 - RampGenerator uses now the delayed start feature of the queue
 - Fix invalid command generated due to upm calculation tolerance at higher speed
